--- a/gutenweb.css
+++ b/gutenweb.css
@@ -22,6 +22,7 @@ a{
   padding-left: 0pt !important;
   padding-right: 0pt !important;
   color: #888;
+  text-decoration: none;
 }
 a:link {
     color: #709cb7;
@@ -430,4 +431,100 @@ span{
 
 label {
   font-size: 0.9em;
+}
+
+.app {
+  width: 100%;
+  border-bottom: 1px;
+  border-style: solid;
+  border-color: #FFF;
+  margin-top: -18px;
+  margin-bottom:18px;
+  /*background-image: url("/img/eveBG.jpg");
+  background-size: 100%;*/
+}
+
+.eve {
+  background-image: url("/img/eveBG.jpg");
+  background-size: 100%;
+}
+
+.evenap {
+  background-image: url("/img/evenapBG.jpg");
+  background-size: 100%;
+}
+
+.1000 {
+  background-image: url("/img/1000BG.jpg");
+  background-size: 100%;
+}
+
+.mapgrounds {
+  background-image: url("/img/mapBG.jpg");
+  background-size: 100%;
+}
+
+.copywriter {
+  background-image: url("/img/copyBG.jpg");
+  background-size: 100%;
+}
+
+.smartalert {
+  background-image: url("/img/saBG.jpg");
+  background-size: 100%;
+}
+
+.top {
+  margin-top: 10px;
+  margin-bottom: 18px;
+}
+
+.last {
+  margin-bottom: 60px;
+}
+.app:before {
+  content: "";
+  float: left;
+  padding-top: 60%
+}
+
+.app:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+.appContent a{
+  text-decoration: none;
+}
+.appName {
+  text-align: center;
+  font-family: Arial, sans-serif;
+  padding-top: 80px;
+  color: #1C1C1E;
+  font-size: 1.1em;
+  font-weight: bold;
+  color: #FFFFFF;
+}
+.tags{
+  text-align: center;
+}
+.appTag {
+  display: inline;
+  background-color: #E8E8E8;
+  margin: 3px 3px 3px 3px;
+  padding: 3px 5px 3px 5px;
+  text-align: center;
+  font-family: Arial, sans-serif;
+  border-radius: 5px;
+  font-size: 0.8em;
+}
+.appDescription{
+  width: 80%;
+  text-align: center;
+  margin-top: 10px;
+  margin-left: auto;
+  margin-right: auto;
+  font-family: Arial, sans-serif;
+  font-size: 0.95em;
+  color: #FFFFFF;
 }
