--- a/gutenweb.css
+++ b/gutenweb.css
@@ -442,6 +442,7 @@ label {
   margin-bottom:18px;
   /*background-image: url("/img/eveBG.jpg");
   background-size: 100%;*/
+  background-color: #787878;
 }
 
 .eve {
@@ -480,7 +481,7 @@ label {
 }
 
 .last {
-  /*margin-bottom: 30px;*/
+  margin-bottom: 60px;
 }
 .app:before {
   content: "";
